# review-insight-engine

./: .env.example  .gitignore  README.md  pyproject.toml  商品评论洞察引擎：PoC 测试数据与业务规则输入.docx
config/: settings.py  taxonomy.yaml
data/golden/: golden_100.csv  golden_qa.json
data/samples/: sample_reviews.csv
src/delivery/: api.py  cli.py
src/input/: csv_parser.py  filters.py
src/map/: batcher.py  llm_extractor.py  prompt_builder.py  retry_handler.py
src/models/: extraction.py  report.py  review.py
src/pipeline/: orchestrator.py  state.py
src/rag/: embeddings.py  qa_engine.py  retriever.py  vector_store.py
src/reduce/: aggregator.py  cross_analysis.py  narrative_gen.py  trend_detector.py
src/report/: executive_summary.py  generator.py  pain_points.py  recommendations.py  trend_anomaly.py
website/app/: index.html
website/app/css/: app.css
website/app/data/: fewshot_library.json  generate_data.py  golden_dataset.csv  golden_dataset.json  test_reviews_820.csv
website/app/js/: api.js  app.js  router.js  state.js
website/app/js/views/: ask.js  dashboard.js  hitl.js  report.js  samples.js  upload.js
文档/: mock_reviews_unique.csv  商品评论洞察引擎 (User Voice AI) - 从 0 到 1 产品架构与复盘文档 2.docx  商品评论洞察引擎：LLM 结构化提取 JSON Schema 设计 2.docx  商品评论洞察引擎：PoC 测试数据与业务规则输入.docx  商品评论洞察引擎：底层数据输入规范与维度设计 2.docx  商品评论洞察引擎：报告模块设计与 Actionable 准则 2.docx
