[project]
name = "uvoice"
version = "0.1.0"
description = "商品评论洞察引擎 — AI-powered e-commerce review insight engine"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "openai>=1.0",
    "chromadb>=0.4",
    "rich>=13.0",
    "click>=8.0",
    "pyyaml>=6.0",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "python-dotenv>=1.0",
    "sentence-transformers>=2.0",
]

[project.scripts]
uvoice = "src.delivery.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
